# tryx

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  examples.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: CI.yml  commit-messages.yml  docs.yml  release.yml
docs/: index.md
docs/api/: blocking.md  chat-actions.md  chatstate.md  client.md  community.md  contact.md  events.md  groups.md  helpers.md  newsletter.md  polls.md  presence.md  privacy.md  profile.md  status.md  types.md  wacore.md
docs/assets/stylesheets/: extra.css
docs/core-concepts/: architecture.md  event-model.md  type-system.md
docs/faq/: qna.md
docs/getting-started/: authentication.md  contributing.md  installation.md  quickstart.md
docs/operations/: deployment.md  performance.md  reliability.md  security.md  troubleshooting.md
docs/reference/: changelog.md  error-handling.md  glossary.md  roadmap.md
docs/tutorials/: command-bot.md  group-automation.md  media-workflows.md  poll-survey.md  profile-privacy.md
examples/: README.md  command_bot.py
python/tryx/: __init__.py  __init__.pyi  backend.py  backend.pyi  client.py  client.pyi  events.py  events.pyi  exceptions.py  exceptions.pyi  helpers.py  helpers.pyi  tryx.pyi  types.py  types.pyi  wacore.py  wacore.pyi
python/tryx/waproto/: whatsapp_pb2.py  whatsapp_pb2.pyi
scripts/: check_commit_message.py  check_stub_parity.py
site/: 404.html  index.html
site/api/blocking/: index.html
site/api/chat-actions/: index.html
site/api/chatstate/: index.html
site/api/client/: index.html
site/api/community/: index.html
site/api/contact/: index.html
site/api/events/: index.html
site/api/groups/: index.html
site/api/helpers/: index.html
site/api/newsletter/: index.html
site/api/polls/: index.html
site/api/presence/: index.html
site/api/privacy/: index.html
site/api/profile/: index.html
site/api/status/: index.html
site/api/types/: index.html
site/api/wacore/: index.html
site/assets/stylesheets/: extra.css
site/core-concepts/architecture/: index.html
site/core-concepts/event-model/: index.html
site/core-concepts/type-system/: index.html
site/faq/qna/: index.html
site/getting-started/authentication/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/operations/deployment/: index.html
site/operations/performance/: index.html
site/operations/reliability/: index.html
site/operations/security/: index.html
site/operations/troubleshooting/: index.html
site/reference/changelog/: index.html
site/reference/error-handling/: index.html
site/reference/glossary/: index.html
site/reference/roadmap/: index.html
site/search/: search_index.json
site/tutorials/command-bot/: index.html
site/tutorials/group-automation/: index.html
site/tutorials/media-workflows/: index.html
site/tutorials/poll-survey/: index.html
site/tutorials/profile-privacy/: index.html
src/: backend.rs  client.rs  dispatcher.rs  events.rs  exceptions.rs  lib.rs  log.rs  main.rs  mod.rs  types.rs
src/clients/: blocking.rs  chat_actions.rs  chatstate.rs  community.rs  contacts.rs  event_callbacks.rs  groups.rs  mod.rs  newsletter.rs  polls.rs  presence.rs  privacy.rs  profile.rs  status.rs  tryx.rs  tryx_client.rs
src/events/: dispatcher.rs  mod.rs  proto_cache.rs  types.rs
src/events/types/: message_and_updates.rs  profile_sync.rs
src/exceptions/: exceptions.rs  mod.rs
src/helpers/: blocking.rs  chatstate.rs  groups.rs  mod.rs  newsletter.rs  polls.rs  presence.rs  status.rs
src/wacore/: download.rs  mod.rs  node.rs  stanza.rs
src/wacore/iq/: blocking.rs  chatstate.rs  community.rs  groups.rs  mod.rs  newsletter.rs  polls.rs  presence.rs  privacy.rs  status.rs  usync.rs
tests/: conftest.py  test_events.py  test_types.py
waproto/: whatsapp.proto
