[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "tryx"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
module-name = "tryx.tryx"
python-source = "python"

[dependency-groups]
dev = [
    "mypy-protobuf>=5.0.0",
    "segno>=1.6.6",
]
# include = [
#     { path = "python/tryx/__init__.py", format = ["sdist", "wheel"] },
#     { path = "python/tryx/yaya.py", format = ["sdist", "wheel"] },
# ]