[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "tryx"
description = "Rust-powered Python SDK for async WhatsApp automation with typed bindings and event-driven APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = [
    "whatsapp",
    "automation",
    "rust",
    "pyo3",
    "async",
    "tokio",
    "bot",
    "protobuf",
]
authors = [
    { name = "krypton-byte" },
]
maintainers = [
    { name = "krypton-byte" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
urls = { Homepage = "https://github.com/krypton-byte/tryx", Repository = "https://github.com/krypton-byte/tryx", Documentation = "https://krypton-byte.github.io/tryx/", Issues = "https://github.com/krypton-byte/tryx/issues" }
dynamic = ["version"]
dependencies = [
    "protobuf>=5.29.6",
]

[tool.maturin]
module-name = "tryx._tryx"
python-source = "python"

[dependency-groups]
dev = [
    "maturin>=1.12,<2.0",
    "mypy>=1.14.0",
    "mypy-protobuf>=5.0.0",
    "pre-commit>=3.7.1,<4.4; python_version >= '3.9' and python_version < '3.10'",
    "pre-commit>=4.5.0; python_version >= '3.10'",
    "pytest>=8.3.5",
    "python-semantic-release>=9.21.1",
    "ruff>=0.11.4",
    "segno>=1.6.6",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
]
# include = [
#     { path = "python/tryx/__init__.py", format = ["sdist", "wheel"] },
#     { path = "python/tryx/yaya.py", format = ["sdist", "wheel"] },
# ]

[tool.ruff]
line-length = 88
target-version = "py38"
extend-exclude = ["target", "site", "libs", "python/tryx/waproto/whatsapp_pb2.py", "python/tryx/waproto/whatsapp_pb2.pyi"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["tryx"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.semantic_release]
version_toml = ["Cargo.toml:package.version"]
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"
major_on_zero = true

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

